2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* stress/startstop.sh: add a simple start/stop/unload stress test script
 
2002-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* understanding/Makefile:
	* understanding/lart.c: small kernel module for
	  profiling test purposes
 
2002-04-13  Philippe Elie  <phil.el@wanadoo.fr>

	* db/ChangeLog: db sub dir have its own ChangeLog now
	* db/*: new directory: standalone code to test oriented btree
	  samples files

2002-01-09  John Levon  <moz@compsoc.man.ac.uk>

	* results/: new directory + files for overhead results etc. 
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* understanding/puzzle.c: testcase for small functions

2001-11-04  Philippe Elie  <ph_e@club-internet.fr>

	* understanding/dname-hash.c: new. A little test
	  to show the behavior of the new hash coding collision handling.

2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* stress/: new directory for stress tests

	* passfail/: new directory for pass/fail tests

	* stress/gen-names.sh:
	* stress/gen-big-names.sh: stressing of the hash map