@@ -1,3 +1,8 @@
+2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* check_opimport.py: opimport test, provide also an example on how to
+	  import a complete session
+
 2002-07-21  John Levon  <moz@compsoc.man.ac.uk>
 
 	* stress/startstop.sh: add a simple start/stop/unload stress test script
